// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Buttons/ApproveButton Basic 1`] = `
<button
  className="ui button ok"
  onClick={[Function]}
>
  <i
    aria-hidden="true"
    className="checkmark icon"
    onClick={[Function]}
  />
  Save
</button>
`;

exports[`Storyshots Buttons/ApproveButton Custom 1`] = `
<button
  className="ui green button ok"
  onClick={[Function]}
>
  <i
    aria-hidden="true"
    className="add user icon"
    onClick={[Function]}
  />
  Add
</button>
`;

exports[`Storyshots Buttons/CancelButton Basic 1`] = `
<button
  className="ui button basic cancel"
  onClick={[Function]}
>
  <i
    aria-hidden="true"
    className="remove icon"
    onClick={[Function]}
  />
  Cancel
</button>
`;

exports[`Storyshots Buttons/CancelButton Custom 1`] = `
<button
  className="ui red button basic cancel"
  onClick={[Function]}
>
  <i
    aria-hidden="true"
    className="stop icon"
    onClick={[Function]}
  />
  Stop
</button>
`;

exports[`Storyshots Buttons/CopyToClipboardButton Basic 1`] = `
<button
  className="ui basic compact icon button"
  onClick={[Function]}
>
  <i
    aria-hidden="true"
    className="copy icon"
    onClick={[Function]}
  />
</button>
`;

exports[`Storyshots Buttons/CopyToClipboardButton Custom 1`] = `
<button
  className="ui basic vertical animated button"
  onClick={[Function]}
>
  <div
    className="visible content"
  >
    Copy ID
  </div>
  <div
    className="hidden content"
  >
    <i
      aria-hidden="true"
      className="copy icon"
      onClick={[Function]}
    />
  </div>
</button>
`;

exports[`Storyshots Cloudify/ResourceVisibility Changeable 1`] = `
<span>
  <i
    aria-hidden="true"
    className="red lock bordered link icon"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />
</span>
`;

exports[`Storyshots Cloudify/ResourceVisibility Unchangeable 1`] = `
<i
  aria-hidden="true"
  className="green user bordered disabled icon"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
/>
`;

exports[`Storyshots Cloudify/VisibilityField Changeable 1`] = `
<i
  aria-hidden="true"
  className="red lock link icon"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  title={null}
/>
`;

exports[`Storyshots Cloudify/VisibilityField Disallow Global 1`] = `
<i
  aria-hidden="true"
  className="red lock link icon"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  title={null}
/>
`;

exports[`Storyshots Cloudify/VisibilityField Unchangeable 1`] = `
<i
  aria-hidden="true"
  className="blue globe disabled icon"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  title={null}
/>
`;

exports[`Storyshots Cloudify/VisibilityIcon Global Visibility 1`] = `
<i
  aria-hidden="true"
  className="blue globe icon"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
/>
`;

exports[`Storyshots Cloudify/VisibilityIcon Invalid Visibility 1`] = `
<i
  aria-hidden="true"
  className="grey question icon"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
/>
`;

exports[`Storyshots Cloudify/VisibilityIcon Private Visibility 1`] = `
<i
  aria-hidden="true"
  className="red lock icon"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
/>
`;

exports[`Storyshots Cloudify/VisibilityIcon Tenant Visibility 1`] = `
<i
  aria-hidden="true"
  className="green user icon"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
/>
`;

exports[`Storyshots Cloudify/VisibilityIcon Unknown Visibility 1`] = `
<i
  aria-hidden="true"
  className="grey question icon"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
/>
`;

exports[`Storyshots Data/HighlightText Bash 1`] = `
<pre
  style={
    Object {
      "background": "#fff",
      "color": "#000",
      "display": "block",
      "overflowX": "auto",
      "padding": "0.5em",
    }
  }
>
  <code
    style={
      Object {
        "whiteSpace": "pre-wrap",
        "wordBreak": "break-word",
      }
    }
  >
    <span
      style={
        Object {
          "color": "#808000",
        }
      }
    >
      #!/bin/bash
    </span>
    

    <span
      style={
        Object {
          "color": "#808080",
          "fontStyle": "italic",
        }
      }
    >
      # declare STRING variable
    </span>
    
STRING=
    <span
      style={
        Object {
          "color": "#008000",
          "fontWeight": "bold",
        }
      }
    >
      "Hello World"
    </span>
    

    <span
      style={
        Object {
          "color": "#808080",
          "fontStyle": "italic",
        }
      }
    >
      #print variable on a screen
    </span>
    

    <span
      className="hljs-built_in"
      style={Object {}}
    >
      echo
    </span>
     
    <span
      style={
        Object {
          "color": "#660e7a",
        }
      }
    >
      $STRING
    </span>
  </code>
</pre>
`;

exports[`Storyshots Data/HighlightText Basic 1`] = `
<pre
  style={
    Object {
      "background": "#fff",
      "color": "#000",
      "display": "block",
      "overflowX": "auto",
      "padding": "0.5em",
    }
  }
>
  <code
    style={
      Object {
        "whiteSpace": "pre-wrap",
        "wordBreak": "break-word",
      }
    }
  >
    {
    
    <span
      className="hljs-attr"
      style={Object {}}
    >
      "employee"
    </span>
    : {
        
    <span
      className="hljs-attr"
      style={Object {}}
    >
      "name"
    </span>
    :       
    <span
      style={
        Object {
          "color": "#008000",
          "fontWeight": "bold",
        }
      }
    >
      "sonoo"
    </span>
    ,
        
    <span
      className="hljs-attr"
      style={Object {}}
    >
      "salary"
    </span>
    :      
    <span
      style={
        Object {
          "color": "#0000ff",
          "fontWeight": "normal",
        }
      }
    >
      56000
    </span>
    ,
        
    <span
      className="hljs-attr"
      style={Object {}}
    >
      "married"
    </span>
    :    
    <span
      style={
        Object {
          "color": "#000080",
          "fontWeight": "bold",
        }
      }
    >
      true
    </span>
    
    }
}
  </code>
</pre>
`;

exports[`Storyshots Data/HighlightText JSON 1`] = `
<pre
  style={
    Object {
      "background": "#fff",
      "color": "#000",
      "display": "block",
      "overflowX": "auto",
      "padding": "0.5em",
    }
  }
>
  <code
    style={
      Object {
        "whiteSpace": "pre-wrap",
        "wordBreak": "break-word",
      }
    }
  >
    {
    
    <span
      className="hljs-attr"
      style={Object {}}
    >
      "employee"
    </span>
    : {
        
    <span
      className="hljs-attr"
      style={Object {}}
    >
      "name"
    </span>
    :       
    <span
      style={
        Object {
          "color": "#008000",
          "fontWeight": "bold",
        }
      }
    >
      "sonoo"
    </span>
    ,
        
    <span
      className="hljs-attr"
      style={Object {}}
    >
      "salary"
    </span>
    :      
    <span
      style={
        Object {
          "color": "#0000ff",
          "fontWeight": "normal",
        }
      }
    >
      56000
    </span>
    ,
        
    <span
      className="hljs-attr"
      style={Object {}}
    >
      "married"
    </span>
    :    
    <span
      style={
        Object {
          "color": "#000080",
          "fontWeight": "bold",
        }
      }
    >
      true
    </span>
    
    }
}
  </code>
</pre>
`;

exports[`Storyshots Data/HighlightText Java Script 1`] = `
<pre
  style={
    Object {
      "background": "#fff",
      "color": "#000",
      "display": "block",
      "overflowX": "auto",
      "padding": "0.5em",
    }
  }
>
  <code
    style={
      Object {
        "whiteSpace": "pre-wrap",
        "wordBreak": "break-word",
      }
    }
  >
    <span
      className="hljs-function"
      style={Object {}}
    >
      <span
        style={
          Object {
            "color": "#000080",
            "fontWeight": "bold",
          }
        }
      >
        function
      </span>
       
      <span
        style={
          Object {
            "color": "#000",
            "fontWeight": "normal",
          }
        }
      >
        ask
      </span>
      (
      <span
        className="hljs-params"
        style={Object {}}
      >
        question, yes, no
      </span>
      ) 
    </span>
    {
  
    <span
      style={
        Object {
          "color": "#000080",
          "fontWeight": "bold",
        }
      }
    >
      if
    </span>
     (confirm(question)) yes()
  
    <span
      style={
        Object {
          "color": "#000080",
          "fontWeight": "bold",
        }
      }
    >
      else
    </span>
     no();
}


    <span
      className="hljs-function"
      style={Object {}}
    >
      <span
        style={
          Object {
            "color": "#000080",
            "fontWeight": "bold",
          }
        }
      >
        function
      </span>
       
      <span
        style={
          Object {
            "color": "#000",
            "fontWeight": "normal",
          }
        }
      >
        showOk
      </span>
      (
      <span
        className="hljs-params"
        style={Object {}}
      />
      ) 
    </span>
    {
  alert( 
    <span
      style={
        Object {
          "color": "#008000",
          "fontWeight": "bold",
        }
      }
    >
      "You agreed."
    </span>
     );
}


    <span
      className="hljs-function"
      style={Object {}}
    >
      <span
        style={
          Object {
            "color": "#000080",
            "fontWeight": "bold",
          }
        }
      >
        function
      </span>
       
      <span
        style={
          Object {
            "color": "#000",
            "fontWeight": "normal",
          }
        }
      >
        showCancel
      </span>
      (
      <span
        className="hljs-params"
        style={Object {}}
      />
      ) 
    </span>
    {
  alert( 
    <span
      style={
        Object {
          "color": "#008000",
          "fontWeight": "bold",
        }
      }
    >
      "You canceled the execution."
    </span>
     );
}


    <span
      style={
        Object {
          "color": "#808080",
          "fontStyle": "italic",
        }
      }
    >
      // usage: functions showOk, showCancel are passed as arguments to ask
    </span>
    
ask(
    <span
      style={
        Object {
          "color": "#008000",
          "fontWeight": "bold",
        }
      }
    >
      "Do you agree?"
    </span>
    , showOk, showCancel);
  </code>
</pre>
`;

exports[`Storyshots Data/HighlightText Python 1`] = `
<pre
  style={
    Object {
      "background": "#fff",
      "color": "#000",
      "display": "block",
      "overflowX": "auto",
      "padding": "0.5em",
    }
  }
>
  <code
    style={
      Object {
        "whiteSpace": "pre-wrap",
        "wordBreak": "break-word",
      }
    }
  >
    <span
      style={
        Object {
          "color": "#000080",
          "fontWeight": "bold",
        }
      }
    >
      import
    </span>
     whois

data = raw_input(
    <span
      style={
        Object {
          "color": "#008000",
          "fontWeight": "bold",
        }
      }
    >
      "Enter a domain: "
    </span>
    )
w = whois.whois(data)


    <span
      style={
        Object {
          "color": "#000080",
          "fontWeight": "bold",
        }
      }
    >
      print
    </span>
     w
  </code>
</pre>
`;

exports[`Storyshots Data/HighlightText YAML 1`] = `
<pre
  style={
    Object {
      "background": "#fff",
      "color": "#000",
      "display": "block",
      "overflowX": "auto",
      "padding": "0.5em",
    }
  }
>
  <code
    style={
      Object {
        "whiteSpace": "pre-wrap",
        "wordBreak": "break-word",
      }
    }
  >
    <span
      className="hljs-attr"
      style={Object {}}
    >
      tosca_definitions_version:
    </span>
     
    <span
      style={
        Object {
          "color": "#008000",
          "fontWeight": "bold",
        }
      }
    >
      cloudify_dsl_1_3
    </span>
    


    <span
      className="hljs-attr"
      style={Object {}}
    >
      description:
    </span>
     
    <span
      style={
        Object {
          "color": "#008000",
          "fontWeight": "bold",
        }
      }
    >
      &gt;
  This blueprint installs a simple web server on the manager VM using Cloudify's script plugin.


    </span>
    <span
      className="hljs-attr"
      style={Object {}}
    >
      imports:
    </span>
    

    <span
      className="hljs-attr"
      style={Object {}}
    >
        - http:
    </span>
    <span
      style={
        Object {
          "color": "#008000",
          "fontWeight": "bold",
        }
      }
    >
      //www.getcloudify.org/spec/cloudify/4.5.5.dev1/types.yaml
    </span>
    


    <span
      className="hljs-attr"
      style={Object {}}
    >
      inputs:
    </span>
    

    <span
      className="hljs-attr"
      style={Object {}}
    >
        server_ip:
    </span>
    

    <span
      className="hljs-attr"
      style={Object {}}
    >
          description:
    </span>
     
    <span
      style={
        Object {
          "color": "#008000",
          "fontWeight": "bold",
        }
      }
    >
      &gt;
      The ip of the server the application will be deployed on.

    </span>
    <span
      className="hljs-attr"
      style={Object {}}
    >
        agent_user:
    </span>
    

    <span
      className="hljs-attr"
      style={Object {}}
    >
          description:
    </span>
     
    <span
      style={
        Object {
          "color": "#008000",
          "fontWeight": "bold",
        }
      }
    >
      &gt;
      User name used when SSH-ing into the started machine.

    </span>
    <span
      className="hljs-attr"
      style={Object {}}
    >
        agent_private_key_path:
    </span>
    

    <span
      className="hljs-attr"
      style={Object {}}
    >
          description:
    </span>
     
    <span
      style={
        Object {
          "color": "#008000",
          "fontWeight": "bold",
        }
      }
    >
      &gt;
      Path to a private key that resides on the management machine.
      SSH-ing into agent machines will be done with this key.
    </span>
  </code>
</pre>
`;

exports[`Storyshots Data/KeyIndicator Executions 1`] = `
<div
  style={
    Object {
      "height": 150,
    }
  }
>
  <div
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <div
      className="ui statistic"
      style={
        Object {
          "left": "50%",
          "position": "absolute",
          "top": "50%",
          "transform": "translate(-50%, -50%)",
          "whiteSpace": "nowrap",
        }
      }
    >
      <div
        className="value"
      >
        <i
          aria-hidden="true"
          className="cogs icon"
          onClick={[Function]}
        />
         
        6
      </div>
      <div
        className="label"
      >
        Running Executions
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Data/KeyIndicator Plugins 1`] = `
<div
  style={
    Object {
      "height": 150,
    }
  }
>
  <div
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <div
      className="ui statistic"
      style={
        Object {
          "left": "50%",
          "position": "absolute",
          "top": "50%",
          "transform": "translate(-50%, -50%)",
          "whiteSpace": "nowrap",
        }
      }
    >
      <div
        className="value"
      >
        <i
          aria-hidden="true"
          className="plug icon"
          onClick={[Function]}
        />
         
        3
      </div>
      <div
        className="label"
      >
        Plugins
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Data/KeyIndicator User Stars 1`] = `
<div
  style={
    Object {
      "height": 150,
    }
  }
>
  <div
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "overflow": "hidden",
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <div
      className="ui statistic"
      style={
        Object {
          "left": "50%",
          "position": "absolute",
          "top": "50%",
          "transform": "translate(-50%, -50%)",
          "whiteSpace": "nowrap",
        }
      }
    >
      <div
        className="value"
      >
        <i
          aria-hidden="true"
          className="star icon"
          onClick={[Function]}
        />
         
        54
      </div>
      <div
        className="label"
      >
        User Stars
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Data/NodesTree Collapsed 1`] = `
<ul
  className="rc-tree rc-tree-show-line"
  role="tree"
  unselectable="on"
>
  <li
    className="rc-tree-treenode-switcher-close"
    role="treeitem"
  >
    <span
      className="rc-tree-switcher rc-tree-switcher_close"
      onClick={[Function]}
    />
    <span
      className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-close"
      onClick={[Function]}
      onContextMenu={[Function]}
      onDoubleClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      title="Encyclopaedia"
    >
      <span
        className="rc-tree-title"
      >
        Encyclopaedia
      </span>
    </span>
  </li>
</ul>
`;

exports[`Storyshots Data/NodesTree Expanded 1`] = `
<ul
  className="rc-tree rc-tree-show-line"
  role="tree"
  unselectable="on"
>
  <li
    className="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      className="rc-tree-switcher rc-tree-switcher_open"
      onClick={[Function]}
    />
    <span
      className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
      onClick={[Function]}
      onContextMenu={[Function]}
      onDoubleClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      title="Encyclopaedia"
    >
      <span
        className="rc-tree-title"
      >
        Encyclopaedia
      </span>
    </span>
    <ul
      className="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded={true}
      role="group"
    >
      <li
        className="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          className="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          onClick={[Function]}
          onContextMenu={[Function]}
          onDoubleClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          title="Science"
        >
          <span
            className="rc-tree-title"
          >
            Science
          </span>
        </span>
      </li>
      <li
        className="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          className="rc-tree-switcher rc-tree-switcher_open"
          onClick={[Function]}
        />
        <span
          className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          onClick={[Function]}
          onContextMenu={[Function]}
          onDoubleClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          title="Culture"
        >
          <span
            className="rc-tree-title"
          >
            Culture
          </span>
        </span>
        <ul
          className="rc-tree-child-tree rc-tree-child-tree-open"
          data-expanded={true}
          role="group"
        >
          <li
            className="rc-tree-treenode-switcher-open"
            role="treeitem"
          >
            <span
              className="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              onClick={[Function]}
              onContextMenu={[Function]}
              onDoubleClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              title="Art"
            >
              <span
                className="rc-tree-title"
              >
                Art
              </span>
            </span>
          </li>
          <li
            className="rc-tree-treenode-switcher-open"
            role="treeitem"
          >
            <span
              className="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              onClick={[Function]}
              onContextMenu={[Function]}
              onDoubleClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              title="Craft"
            >
              <span
                className="rc-tree-title"
              >
                Craft
              </span>
            </span>
          </li>
        </ul>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Storyshots Data/NodesTree Selectable 1`] = `
<ul
  className="rc-tree rc-tree-show-line"
  role="tree"
  unselectable="on"
>
  <li
    className="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      className="rc-tree-switcher rc-tree-switcher_open"
      onClick={[Function]}
    />
    <span
      className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
      onClick={[Function]}
      onContextMenu={[Function]}
      onDoubleClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      title="Encyclopaedia"
    >
      <span
        className="rc-tree-title"
      >
        Encyclopaedia
      </span>
    </span>
    <ul
      className="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded={true}
      role="group"
    >
      <li
        className="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          className="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          onClick={[Function]}
          onContextMenu={[Function]}
          onDoubleClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          title="Science"
        >
          <span
            className="rc-tree-title"
          >
            Science
          </span>
        </span>
      </li>
      <li
        className="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          className="rc-tree-switcher rc-tree-switcher_open"
          onClick={[Function]}
        />
        <span
          className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          onClick={[Function]}
          onContextMenu={[Function]}
          onDoubleClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          title="Culture"
        >
          <span
            className="rc-tree-title"
          >
            Culture
          </span>
        </span>
        <ul
          className="rc-tree-child-tree rc-tree-child-tree-open"
          data-expanded={true}
          role="group"
        >
          <li
            className="rc-tree-treenode-switcher-open"
            role="treeitem"
          >
            <span
              className="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              onClick={[Function]}
              onContextMenu={[Function]}
              onDoubleClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              title="Art"
            >
              <span
                className="rc-tree-title"
              >
                Art
              </span>
            </span>
          </li>
          <li
            className="rc-tree-treenode-switcher-open"
            role="treeitem"
          >
            <span
              className="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              onClick={[Function]}
              onContextMenu={[Function]}
              onDoubleClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              title="Craft"
            >
              <span
                className="rc-tree-title"
              >
                Craft
              </span>
            </span>
          </li>
        </ul>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Storyshots Data/NodesTree With Icons 1`] = `
<ul
  className="rc-tree rc-tree-show-line"
  role="tree"
  unselectable="on"
>
  <li
    className="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      className="rc-tree-switcher rc-tree-switcher_open"
      onClick={[Function]}
    />
    <span
      className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
      onClick={[Function]}
      onContextMenu={[Function]}
      onDoubleClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      title="Encyclopaedia"
    >
      <span
        className="rc-tree-iconEle rc-tree-icon__open"
      />
      <span
        className="rc-tree-title"
      >
        Encyclopaedia
      </span>
    </span>
    <ul
      className="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded={true}
      role="group"
    >
      <li
        className="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          className="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          onClick={[Function]}
          onContextMenu={[Function]}
          onDoubleClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          title="Science"
        >
          <span
            className="rc-tree-iconEle rc-tree-icon__docu"
          />
          <span
            className="rc-tree-title"
          >
            Science
          </span>
        </span>
      </li>
      <li
        className="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          className="rc-tree-switcher rc-tree-switcher_open"
          onClick={[Function]}
        />
        <span
          className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          onClick={[Function]}
          onContextMenu={[Function]}
          onDoubleClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          title="Culture"
        >
          <span
            className="rc-tree-iconEle rc-tree-icon__open"
          />
          <span
            className="rc-tree-title"
          >
            Culture
          </span>
        </span>
        <ul
          className="rc-tree-child-tree rc-tree-child-tree-open"
          data-expanded={true}
          role="group"
        >
          <li
            className="rc-tree-treenode-switcher-open"
            role="treeitem"
          >
            <span
              className="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              onClick={[Function]}
              onContextMenu={[Function]}
              onDoubleClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              title="Art"
            >
              <span
                className="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                className="rc-tree-title"
              >
                Art
              </span>
            </span>
          </li>
          <li
            className="rc-tree-treenode-switcher-open"
            role="treeitem"
          >
            <span
              className="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              onClick={[Function]}
              onContextMenu={[Function]}
              onDoubleClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              title="Craft"
            >
              <span
                className="rc-tree-iconEle rc-tree-icon__docu"
              />
              <span
                className="rc-tree-title"
              >
                Craft
              </span>
            </span>
          </li>
        </ul>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Storyshots Data/NodesTree With Tree Data 1`] = `
<ul
  className="rc-tree rc-tree-show-line"
  role="tree"
  unselectable="on"
>
  <li
    className="rc-tree-treenode-switcher-open"
    role="treeitem"
  >
    <span
      className="rc-tree-switcher rc-tree-switcher_open"
      onClick={[Function]}
    />
    <span
      className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
      onClick={[Function]}
      onContextMenu={[Function]}
      onDoubleClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      title="Encyclopaedia"
    >
      <span
        className="rc-tree-title"
      >
        Encyclopaedia
      </span>
    </span>
    <ul
      className="rc-tree-child-tree rc-tree-child-tree-open"
      data-expanded={true}
      role="group"
    >
      <li
        className="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          className="rc-tree-switcher rc-tree-switcher-noop"
        />
        <span
          className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
          onClick={[Function]}
          onContextMenu={[Function]}
          onDoubleClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          title="Science"
        >
          <span
            className="rc-tree-title"
          >
            Science
          </span>
        </span>
      </li>
      <li
        className="rc-tree-treenode-switcher-open"
        role="treeitem"
      >
        <span
          className="rc-tree-switcher rc-tree-switcher_open"
          onClick={[Function]}
        />
        <span
          className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-open"
          onClick={[Function]}
          onContextMenu={[Function]}
          onDoubleClick={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          title="Culture"
        >
          <span
            className="rc-tree-title"
          >
            Culture
          </span>
        </span>
        <ul
          className="rc-tree-child-tree rc-tree-child-tree-open"
          data-expanded={true}
          role="group"
        >
          <li
            className="rc-tree-treenode-switcher-open"
            role="treeitem"
          >
            <span
              className="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              onClick={[Function]}
              onContextMenu={[Function]}
              onDoubleClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              title="Art"
            >
              <span
                className="rc-tree-title"
              >
                Art
              </span>
            </span>
          </li>
          <li
            className="rc-tree-treenode-switcher-open"
            role="treeitem"
          >
            <span
              className="rc-tree-switcher rc-tree-switcher-noop"
            />
            <span
              className="rc-tree-node-content-wrapper rc-tree-node-content-wrapper-normal"
              onClick={[Function]}
              onContextMenu={[Function]}
              onDoubleClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              title="Craft"
            >
              <span
                className="rc-tree-title"
              >
                Craft
              </span>
            </span>
          </li>
        </ul>
      </li>
    </ul>
  </li>
</ul>
`;

exports[`Storyshots Elements/Checkmark Basic 1`] = `
<i
  aria-hidden="true"
  className="square outline icon"
  onClick={[Function]}
  title="No"
/>
`;

exports[`Storyshots Elements/Checkmark Checked 1`] = `
<i
  aria-hidden="true"
  className="checkmark box icon"
  onClick={[Function]}
  title="Yes"
/>
`;

exports[`Storyshots Elements/Checkmark Unchecked 1`] = `
<i
  aria-hidden="true"
  className="square outline icon"
  onClick={[Function]}
  title="No"
/>
`;

exports[`Storyshots Elements/Dropdown Basic 1`] = `
<div
  style={
    Object {
      "height": 200,
    }
  }
>
  <div
    aria-expanded={false}
    className="ui search selection dropdown"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      autoComplete="off"
      className="search"
      onChange={[Function]}
      style={
        Object {
          "width": undefined,
        }
      }
      tabIndex={0}
      type="text"
      value=""
    />
    <div
      aria-atomic={true}
      aria-live="polite"
      className="text"
      role="alert"
    >
      Blue
    </div>
    <i
      aria-hidden="true"
      className="dropdown icon clear"
      onClick={[Function]}
    />
    <div
      className="menu transition"
      role="listbox"
    >
      <div
        aria-checked={true}
        aria-selected={true}
        className="active selected item"
        onClick={[Function]}
        option-value="blue"
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          Blue
        </span>
      </div>
      <div
        aria-checked={false}
        aria-selected={false}
        className="item"
        onClick={[Function]}
        option-value="red"
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          Red
        </span>
      </div>
      <div
        aria-checked={false}
        aria-selected={false}
        className="item"
        onClick={[Function]}
        option-value="white"
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          White
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Elements/Dropdown Empty 1`] = `
<div
  style={
    Object {
      "height": 200,
    }
  }
>
  <div
    aria-expanded={false}
    className="ui dropdown"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    role="listbox"
    tabIndex={0}
  >
    <div
      aria-atomic={true}
      aria-live="polite"
      className="text"
      role="alert"
    />
    <i
      aria-hidden="true"
      className="dropdown icon"
      onClick={[Function]}
    />
    <div
      className="menu transition"
    />
  </div>
</div>
`;

exports[`Storyshots Elements/Dropdown With Empty Option 1`] = `
<div
  style={
    Object {
      "height": 200,
    }
  }
>
  <div
    aria-expanded={false}
    className="ui search selection dropdown"
    onBlur={[Function]}
    onChange={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseDown={[Function]}
    role="combobox"
  >
    <input
      aria-autocomplete="list"
      autoComplete="off"
      className="search"
      onChange={[Function]}
      style={
        Object {
          "width": undefined,
        }
      }
      tabIndex={0}
      type="text"
      value=""
    />
    <div
      aria-atomic={true}
      aria-live="polite"
      className="text"
      role="alert"
    >
      Blue
    </div>
    <i
      aria-hidden="true"
      className="dropdown icon clear"
      onClick={[Function]}
    />
    <div
      className="menu transition"
      role="listbox"
    >
      <div
        aria-checked={true}
        aria-selected={true}
        className="active selected item"
        onClick={[Function]}
        option-value="blue"
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          Blue
        </span>
      </div>
      <div
        aria-checked={false}
        aria-selected={false}
        className="item"
        onClick={[Function]}
        option-value="red"
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          Red
        </span>
      </div>
      <div
        aria-checked={false}
        aria-selected={false}
        className="item"
        onClick={[Function]}
        option-value="white"
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          White
        </span>
      </div>
      <div
        aria-checked={false}
        aria-selected={false}
        className="item"
        onClick={[Function]}
        option-value="empty-option"
        role="option"
        style={
          Object {
            "pointerEvents": "all",
          }
        }
      >
        <span
          className="text"
        >
          
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Elements/EditableLabel Basic 1`] = `
<label
  className=" editPlaceholder"
  onClick={[Function]}
>
  Click to edit
</label>
`;

exports[`Storyshots Elements/EditableLabel Editable 1`] = `
<label
  className=" editPlaceholder"
  onClick={[Function]}
>
  Enter your text here...
</label>
`;

exports[`Storyshots Elements/EditableLabel Read Only 1`] = `
<label
  className=" "
  onClick={[Function]}
>
  Sample Text
</label>
`;

exports[`Storyshots Elements/ErrorMessage Auto Hide 1`] = `
<div
  className="ui error message"
>
  <i
    aria-hidden="true"
    className="close icon"
    onClick={[Function]}
  />
  <div
    className="header"
  >
    Error Occured
  </div>
  <div
    className="content"
  >
    This error will disappear soon.
  </div>
</div>
`;

exports[`Storyshots Elements/ErrorMessage Basic 1`] = `
<div
  className="ui error message"
>
  <i
    aria-hidden="true"
    className="close icon"
    onClick={[Function]}
  />
  <div
    className="header"
  >
    Error Occured
  </div>
  <div
    className="content"
  >
    Invalid Blueprint ID provided
  </div>
</div>
`;

exports[`Storyshots Elements/ErrorMessage Custom Header 1`] = `
<div
  className="ui error message"
>
  <i
    aria-hidden="true"
    className="close icon"
    onClick={[Function]}
  />
  <div
    className="header"
  >
    Invalid input
  </div>
  <div
    className="content"
  >
    Please provide value according to blueprint naming rules.
  </div>
</div>
`;

exports[`Storyshots Elements/ErrorMessage Error Object 1`] = `
<div
  className="ui error message"
>
  <i
    aria-hidden="true"
    className="close icon"
    onClick={[Function]}
  />
  <div
    className="header"
  >
    Input error
  </div>
  <div
    className="content"
  >
    Please provide agent_private_key_path
  </div>
</div>
`;

exports[`Storyshots Elements/ErrorMessage Errors List 1`] = `
<div
  className="ui error message"
>
  <i
    aria-hidden="true"
    className="close icon"
    onClick={[Function]}
  />
  <div
    className="header"
  >
    Errors in the form
  </div>
  <ul
    className="list"
  >
    <li
      className="content"
    >
      Please provide deployment name
    </li>
    <li
      className="content"
    >
      Please provide agent_private_key_path
    </li>
  </ul>
</div>
`;

exports[`Storyshots Elements/Loading Basic 1`] = `
<div
  className="ui basic segment"
  style={
    Object {
      "height": "100%",
      "zIndex": 5,
    }
  }
>
  <div
    className="ui active transition visible inverted dimmer"
    onClick={[Function]}
  >
    <div
      className="content"
    >
      <div
        className="ui text loader"
      >
        Loading
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Elements/Loading Custom Message 1`] = `
<div
  className="ui basic segment"
  style={
    Object {
      "height": "100%",
      "zIndex": 5,
    }
  }
>
  <div
    className="ui active transition visible inverted dimmer"
    onClick={[Function]}
  >
    <div
      className="content"
    >
      <div
        className="ui text loader"
      >
        Loading files
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Elements/Menu Example 1`] = `
<div
  className="ui vertical menu"
>
  <div
    className="item"
    onClick={[Function]}
  >
    <div
      className="header"
    >
      Products
    </div>
    <div
      className="menu"
    >
      <a
        className="item"
        onClick={[Function]}
        option-value="enterprise"
      >
        Enterprise
      </a>
      <a
        className="item"
        onClick={[Function]}
        option-value="consumer"
      >
        Consumer
      </a>
    </div>
  </div>
  <div
    className="item"
    onClick={[Function]}
  >
    <div
      className="header"
    >
      CMS Solutions
    </div>
    <div
      className="menu"
    >
      <a
        className="item"
        onClick={[Function]}
        option-value="rails"
      >
        Rails
      </a>
      <a
        className="item"
        onClick={[Function]}
        option-value="python"
      >
        Python
      </a>
      <a
        className="item"
        onClick={[Function]}
        option-value="php"
      >
        Php
      </a>
    </div>
  </div>
</div>
`;

exports[`Storyshots Form/ColorPicker Basic 1`] = `
<div
  style={
    Object {
      "display": "inline-block",
      "position": "relative",
    }
  }
>
  <div
    style={
      Object {
        "MozBorderRadius": 2,
        "MozBoxShadow": "0 2px 10px rgba(0,0,0,.12), 0 2px 5px rgba(0,0,0,.16)",
        "OBorderRadius": 2,
        "OBoxShadow": "0 2px 10px rgba(0,0,0,.12), 0 2px 5px rgba(0,0,0,.16)",
        "WebkitBorderRadius": 2,
        "WebkitBoxShadow": "0 2px 10px rgba(0,0,0,.12), 0 2px 5px rgba(0,0,0,.16)",
        "background": "#fff",
        "borderRadius": 2,
        "bottom": "0px",
        "boxShadow": "0 2px 10px rgba(0,0,0,.12), 0 2px 5px rgba(0,0,0,.16)",
        "left": "0px",
        "msBorderRadius": 2,
        "msBoxShadow": "0 2px 10px rgba(0,0,0,.12), 0 2px 5px rgba(0,0,0,.16)",
        "position": "absolute",
        "right": "0px",
        "top": "0px",
      }
    }
  />
  <div
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="compact-picker "
      style={
        Object {
          "boxSizing": "initial",
          "paddingLeft": "5px",
          "paddingTop": "5px",
          "width": "240px",
        }
      }
    >
      <div>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#4D4D4D",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#4D4D4D"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#fff",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#999999",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#999999"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#000",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "MozBoxShadow": "inset 0 0 0 1px #ddd",
                "OBoxShadow": "inset 0 0 0 1px #ddd",
                "WebkitBoxShadow": "inset 0 0 0 1px #ddd",
                "background": "#FFFFFF",
                "boxShadow": "inset 0 0 0 1px #ddd",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "msBoxShadow": "inset 0 0 0 1px #ddd",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#FFFFFF"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#000",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#F44E3B",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#F44E3B"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#fff",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#FE9200",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#FE9200"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#000",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#FCDC00",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#FCDC00"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#000",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#DBDF00",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#DBDF00"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#000",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#A4DD00",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#A4DD00"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#000",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#68CCCA",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#68CCCA"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#000",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#73D8FF",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#73D8FF"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#000",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#AEA1FF",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#AEA1FF"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#000",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#FDA1FF",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#FDA1FF"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#000",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#333333",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#333333"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#fff",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#808080",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#808080"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#000",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#cccccc",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#cccccc"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#000",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#D33115",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#D33115"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#fff",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#E27300",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#E27300"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#000",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#FCC400",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#FCC400"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#000",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#B0BC00",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#B0BC00"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#000",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#68BC00",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#68BC00"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#000",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#16A5A5",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#16A5A5"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#fff",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#009CE0",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#009CE0"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#fff",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#7B64FF",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#7B64FF"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#fff",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#FA28FF",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#FA28FF"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#fff",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#000000",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#000000"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#fff",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "1",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#666666",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#666666"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#fff",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#B3B3B3",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#B3B3B3"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#000",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#9F0500",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#9F0500"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#fff",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#C45100",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#C45100"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#fff",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#FB9E00",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#FB9E00"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#000",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#808900",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#808900"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#fff",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#194D33",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#194D33"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#fff",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#0C797D",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#0C797D"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#fff",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#0062B1",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#0062B1"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#fff",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#653294",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#653294"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#fff",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <span
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            onClick={[Function]}
            onKeyDown={[Function]}
            style={
              Object {
                "background": "#AB149E",
                "cursor": "pointer",
                "float": "left",
                "height": "15px",
                "marginBottom": "5px",
                "marginRight": "5px",
                "outline": "none",
                "position": "relative",
                "width": "15px",
              }
            }
            tabIndex={0}
            title="#AB149E"
          >
            <div
              style={
                Object {
                  "MozBorderRadius": "50%",
                  "OBorderRadius": "50%",
                  "WebkitBorderRadius": "50%",
                  "background": "#fff",
                  "borderRadius": "50%",
                  "bottom": "5px",
                  "left": "5px",
                  "msBorderRadius": "50%",
                  "opacity": "0",
                  "position": "absolute",
                  "right": "5px",
                  "top": "5px",
                }
              }
            />
          </div>
        </span>
        <div
          style={
            Object {
              "clear": "both",
            }
          }
        />
      </div>
      <div
        className="flexbox-fix"
        style={
          Object {
            "display": "flex",
            "paddingBottom": "6px",
            "paddingRight": "5px",
            "position": "relative",
          }
        }
      >
        <div
          style={
            Object {
              "background": "#000000",
              "height": "9px",
              "left": "5px",
              "position": "absolute",
              "top": "6px",
              "width": "9px",
            }
          }
        />
        <div
          style={
            Object {
              "MozBoxFlex": "6",
              "WebkitBoxFlex": "6",
              "WebkitFlex": "6",
              "flex": "6",
              "msFlex": "6",
              "position": "relative",
            }
          }
        >
          <input
            onBlur={[Function]}
            onChange={[Function]}
            onKeyDown={[Function]}
            spellCheck="false"
            style={
              Object {
                "background": "none",
                "border": "none",
                "color": "#333",
                "fontSize": "12px",
                "height": "16px",
                "outline": "none",
                "padding": "0px",
                "paddingLeft": "20%",
                "width": "80%",
              }
            }
            value="#000000"
          />
          <span
            onMouseDown={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
          >
            hex
          </span>
        </div>
        <div
          style={
            Object {
              "MozBoxFlex": "3",
              "WebkitBoxFlex": "3",
              "WebkitFlex": "3",
              "flex": "3",
              "msFlex": "3",
              "position": "relative",
            }
          }
        >
          <input
            onBlur={[Function]}
            onChange={[Function]}
            onKeyDown={[Function]}
            spellCheck="false"
            style={
              Object {
                "background": "none",
                "border": "none",
                "color": "#333",
                "fontSize": "12px",
                "height": "16px",
                "outline": "none",
                "padding": "0px",
                "paddingLeft": "30%",
                "width": "70%",
              }
            }
            value="0"
          />
          <span
            onMouseDown={[Function]}
            style={
              Object {
                "color": "#999",
                "fontSize": "12px",
                "left": "0px",
                "lineHeight": "16px",
                "position": "absolute",
                "textTransform": "uppercase",
                "top": "3px",
              }
            }
          >
            r
          </span>
        </div>
        <div
          style={
            Object {
              "MozBoxFlex": "3",
              "WebkitBoxFlex": "3",
              "WebkitFlex": "3",
              "flex": "3",
              "msFlex": "3",
              "position": "relative",
            }
          }
        >
          <input
            onBlur={[Function]}
            onChange={[Function]}
            onKeyDown={[Function]}
            spellCheck="false"
            style={
              Object {
                "background": "none",
                "border": "none",
                "color": "#333",
                "fontSize": "12px",
                "height": "16px",
                "outline": "none",
                "padding": "0px",
                "paddingLeft": "30%",
                "width": "70%",
              }
            }
            value="0"
          />
          <span
            onMouseDown={[Function]}
            style={
              Object {
                "color": "#999",
                "fontSize": "12px",
                "left": "0px",
                "lineHeight": "16px",
                "position": "absolute",
                "textTransform": "uppercase",
                "top": "3px",
              }
            }
          >
            g
          </span>
        </div>
        <div
          style={
            Object {
              "MozBoxFlex": "3",
              "WebkitBoxFlex": "3",
              "WebkitFlex": "3",
              "flex": "3",
              "msFlex": "3",
              "position": "relative",
            }
          }
        >
          <input
            onBlur={[Function]}
            onChange={[Function]}
            onKeyDown={[Function]}
            spellCheck="false"
            style={
              Object {
                "background": "none",
                "border": "none",
                "color": "#333",
                "fontSize": "12px",
                "height": "16px",
                "outline": "none",
                "padding": "0px",
                "paddingLeft": "30%",
                "width": "70%",
              }
            }
            value="0"
          />
          <span
            onMouseDown={[Function]}
            style={
              Object {
                "color": "#999",
                "fontSize": "12px",
                "left": "0px",
                "lineHeight": "16px",
                "position": "absolute",
                "textTransform": "uppercase",
                "top": "3px",
              }
            }
          >
            b
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Modal/Alert Basic 1`] = `
<div>
  <button
    className="ui button"
    onClick={[Function]}
  >
    Show Alert
  </button>
</div>
`;

exports[`Storyshots Modal/Confirm Basic 1`] = `
<div>
  <button
    className="ui button"
    onClick={[Function]}
  >
    Show Confirm
  </button>
</div>
`;

exports[`Storyshots Modal/ReadmeModal Basic 1`] = `
<div>
  <button
    className="ui button"
    onClick={[Function]}
  >
    Show Readme
  </button>
</div>
`;

exports[`Storyshots Popups/Popup Basic 1`] = `
<span
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Hover over me to see popup
</span>
`;

exports[`Storyshots Popups/PopupConfirm Basic 1`] = `
<button
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  type="button"
>
  Delete
</button>
`;

exports[`Storyshots Popups/PopupConfirm No Cancel Button 1`] = `
<button
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  type="button"
>
  Delete
</button>
`;

exports[`Storyshots Popups/PopupHelp Basic 1`] = `
<i
  aria-hidden="true"
  className="help circle icon"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
/>
`;

exports[`Storyshots Popups/PopupHelp Custom Header 1`] = `
<i
  aria-hidden="true"
  className="help circle icon"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
/>
`;

exports[`Storyshots Popups/PopupHelp Custom Trigger 1`] = `
<span
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  Show Help
</span>
`;

exports[`Storyshots Popups/PopupMenu Basic 1`] = `
<i
  aria-hidden="true"
  className="content link icon"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
/>
`;

exports[`Storyshots Popups/PopupMenu Custom Icon 1`] = `
<i
  aria-hidden="true"
  className="arrow down bordered link icon"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
/>
`;

exports[`Storyshots Popups/PopupMenu Custom Position 1`] = `
<i
  aria-hidden="true"
  className="content link icon"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
/>
`;

exports[`Storyshots Popups/PopupMenu Help Popup 1`] = `
<span
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <i
    aria-hidden="true"
    className="content link icon"
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  />
</span>
`;
